<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  

<PreferenceCategory 
        android:title="@string/tap_settings_title"
        android:key="title_2">    

    <EditTextPreference
    android:key="tapnum"
    android:summary="@string/tapnum_summary"
    android:title="@string/tap_title"
 	 />
    
    <ListPreference
    style="@style/AppTheme"
    android:key="tapnum2"
    android:title="@string/tap2_title"
    android:dialogTitle="@string/tap2dialog_title"
    android:entries="@array/tap2_array"
    android:entryValues="@array/tap2_array_values"
    android:defaultValue="@string/tap2_default" />
    
    <ListPreference
    android:key="timeout"
    android:title="@string/timeout_title"
    android:dialogTitle="@string/timeout_title"
    android:entries="@array/timeout_array"
    android:entryValues="@array/timeout_array_values"
    android:defaultValue="@string/timeout_default" />

     <EditTextPreference
    android:key="vibnum"
    android:title="@string/vib_title"
 	 />
     
      <EditTextPreference
    android:key="soundnum"
    android:title="@string/sound_title"
 	 />
    
</PreferenceCategory>


</PreferenceScreen>